# wheat-tea-iot

./: .gitignore
.github/workflows/: host-computer-ci.yml
host-computer/: api_client.py  config.py  main.py  pyproject.toml  requirements-test.txt
host-computer/tests/: test_core.py
host-computer/widgets/: alarm_widget.py  control_widget.py  dashboard.py  history_widget.py  stats_widget.py
